<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/KanarekHeader"
            android:layout_width="188dp"
            android:layout_height="88dp"
            android:layout_marginTop="48dp"
            android:text="@string/reset_header" />


        <TextView
            android:text="@string/password_hint"
            android:textSize="14sp"
            android:textColor="@color/text_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password_input"
            style="@style/KanarekEditText.Rounded"
            android:hint="Wprowadź swoje nowe hasło"
            android:inputType="textPassword" />

        <TextView
            android:text="@string/confirm_password_label"
            android:textSize="14sp"
            android:textColor="@color/text_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/confirm_password_input"
            style="@style/KanarekEditText.Rounded"
            android:hint="Powtórz swoje nowe hasło"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/reset_button"
            style="@style/KanarekButton.Dark"
            android:text="@string/reset_button"
            android:layout_marginTop="32dp" />
    </LinearLayout>
</ScrollView>
